# sniff

./: .gitignore  CMakeLists.txt  README.md  sample.txt  sniff  sniff.c
scripts/: generator.py
src/include/: cli.h  file_handler.h  search.h  threading.h
src/sniffiles/: cli.c  file_handler.c  search.c  sniff.c  threading.c
